@@ -30,9 +30,20 @@ Key: `UP, LEFT, DOWN, RIGHT` to move, `ENTER` to start the game, `SPACE` to clea
 
 ## To Run
  
-To load Map:
+To load MapViewer:
  * Run the .jar files 
  * WARNING: make sure you have Java FX library and JRE system library [11.0.2] downloaded before run.
+ * Open command prompt
+ * Type in cd 'Absolute path to where MapView.jar is'
+ * Example: cd C:\Users\Default User.DESKTOP-9JB0E7L\Desktop\eclipse\CW2-Diamond-Hunter
+ * Type in the line below
+ * java --module-path="'absolute path to where you stored your javafx.jar files'" --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -jar MapViewer.jar
+ * Example: java --module-path="C:\Program Files\Java\javafx-sdk-11.0.2\lib" --add-modules=javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.swing,javafx.web -jar MapViewer.jar
+ 
+ To Run the game only
+ * Double click to run normally
+ * Right-click to run wit Java (TM) SE binary in case it doesn't work
+ 
  
  To Set Axe/Boat:
  * Click Place Axe/Boat on the right side of the MapViwer.
